[package]
name = "sh-builtin-common-util"
version = "0.1.0"
authors = ["eth-p <eth-p+git@hidden.email>"]
description = "Utilities for parsing data from proc macros (part of sh-builtin)"
keywords = []
license = "MIT/Apache-2.0"
edition = "2018"
homepage = "https://github.com/eth-p/sh-builtin-rs"
repository = "https://github.com/eth-p/sh-builtin-rs"

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }
